已按你的要求改成“web 类工具不设执行超时，长时间任务由用户手工 kill”。
改动点：
- [McpToolConcurrencyManager.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/tool/McpToolConcurrencyManager.java:120)：`timeout-seconds <= 0` 时不再 `future.get(timeout)`，改为一直等待。
- 同文件队列逻辑：`queue-timeout-seconds <= 0` 时等待并发槽，不再队列超时。
- MCP 配置里 `web_search`、`web_site_search`、`web_crawler`、兼容别名 `crawl_url` 全部设置为：
  - `timeout-seconds: 0`
  - `queue-timeout-seconds: 0`
- [WebKnowledgeMcpToolRegistrar.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/web/WebKnowledgeMcpToolRegistrar.java:85)：这些 web/crawler 工具 metadata 的 `timeoutMillis` 也改成 `0L`，避免日志里还显示 90000 误导。
- 新增 [McpToolConcurrencyManagerTest.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/test/java/com/chatchat/mcpserver/tool/McpToolConcurrencyManagerTest.java:1)，覆盖“执行不超时”和“队列等待不超时”。

验证已通过：

```powershell
mvn -pl chatchat-mcp-server -am "-Dtest=McpToolConcurrencyManagerTest" "-Dsurefire.failIfNoSpecifiedTests=false" test
```

结果：`Tests run: 2, Failures: 0, Errors: 0`。

需要重启 MCP server 后配置才会生效。